# fast-api-template

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: code-quality.yml
app/: main.py
app/ai/: controller.py  models.py  service.py
app/auth/: controller.py  dependencies.py  models.py  service.py
app/core/: api.py  config.py  logger.py
app/core/adapters/: __init__.py  inngest.py
app/database/: core.py
app/entities/: __init__.py  todo.py  user.py
app/langfuse/: controller.py  dependency.py  model.py  service.py
app/todos/: controller.py  dependencies.py  models.py  service.py
app/users/: controller.py  dependencies.py  service.py
migrations/: README.md  env.py
migrations/versions/: 0ceb9da3f85f_initial_migration.py  d60bdb665e3d_remove_timezone_aware_constraint.py  f1eb1072e7ad_add_timezone_aware_config.py
src/: main.py
src/auth/: controller.py  dependencies.py  models.py  service.py
src/core/: api.py  config.py  exceptions.py  logger.py  rate_limiting.py
src/database/: core.py
src/entities/: __init__.py  todo.py  user.py
src/langfuse/: controller.py  dependency.py  service.py
src/todos/: controller.py  dependencies.py  models.py  service.py
src/users/: controller.py  dependencies.py  models.py  service.py
