[project]
name = "fast-api-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "passlib>=1.7.4",
    "pydantic[email]>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "python-dotenv>=1.1.1",
    "slowapi>=0.1.9",
    "types-passlib>=1.7.7.20250602",
    "types-pyjwt>=1.7.1",
    "uvicorn>=0.35.0",
    "python-multipart>=0.0.20",
    "alembic>=1.16.4",
    "sqlalchemy[asyncio]>=2.0.43",
    "asyncpg>=0.30.0",
    "pre-commit>=4.3.0",
    "inngest>=0.5.6",
    "langchain[google-genai]>=0.3.27",
]

[dependency-groups]
dev = [
    "pyright>=1.1.404",
    "ruff>=0.12.10",
]

[tool.ruff]
exclude = [".venv", "migrations"]

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
ignore = ["W191"]
extend-select = [
    "F",        # Pyflakes rules
    "W",        # PyCodeStyle warnings
    "E",        # PyCodeStyle errors
    "I",        # Sort imports properly
    "UP",       # Warn if certain things can changed due to newer Python versions
    "C4",       # Catch incorrect use of comprehensions, dict, list, etc
    "FA",       # Enforce from __future__ import annotations
    "ISC",      # Good use of string concatenation
    "ICN",      # Use common import conventions
    "RET",      # Good return practices
    "SIM",      # Common simplification rules
    "TID",      # Some good import practices
    "TC",       # Enforce importing certain types in a TYPE_CHECKING block
    "PTH",      # Use pathlib instead of os.path
    "TD",       # Be diligent with TODO comments
	"COM",      # enforce trailing comma rules
	"DTZ",      # require strict timezone manipulation with datetime
	"FBT",      # detect boolean traps
	"N",        # enforce naming conventions, e.g. ClassName vs function_name
]
